--- a/index2.html
+++ b/index2.html
@@ -141,6 +141,7 @@
         </div>
       </div>
     </div>
+    <!-- descrizione per roma -->
     <section class="white-section">
       <div class="text-container">
         <p class="intro text-p">
@@ -259,6 +260,50 @@
         </div>
       </div>
     </div>
+    <!-- user review -->
+    <section class="users-feedback">
+      <h1>User Review</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="user-review">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero
+                corrupti possimus obcaecati amet deleniti ipsa blanditiis sequi
+                recusandae minus assumenda, esse cum enim necessitatibus aut?
+              </p>
+              <h5>Matteo Carracino</h5>
+              <small>Naples</small>
+            </div>
+            <img src="" />
+          </div>
+          <div class="col-md-4">
+            <div class="user-review">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero
+                corrupti possimus obcaecati amet deleniti ipsa blanditiis sequi
+                recusandae minus assumenda, esse cum enim necessitatibus aut?
+              </p>
+              <h5>Matteo Carracino</h5>
+              <small>Naples</small>
+            </div>
+            <img src="" />
+          </div>
+          <div class="col-md-4">
+            <div class="user-review">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero
+                corrupti possimus obcaecati amet deleniti ipsa blanditiis sequi
+                recusandae minus assumenda, esse cum enim necessitatibus aut?
+              </p>
+              <h5>Matteo Carracino</h5>
+              <small>Naples</small>
+            </div>
+            <img src="" />
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- footer -->
     <footer class="w-section" id="footer">
       <i class="fab fa-twitter download-class2"></i>
