--- a/about_Us.html
+++ b/about_Us.html
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 team-box">
+        <div class="col-md-6 team-box" style="text-align: center">
           <div class="team-img">
             <img
               class="img-fluid"
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="col-md-6 team-box">
-          <div class="team-img thumbnail">
+          <div class="team-img thumbnail" style="text-align: center">
             <img
               class="img-fluid"
               style="width: 248px"
