--- a/page_ini_itinerari.html
+++ b/page_ini_itinerari.html
@@ -56,7 +56,7 @@
             href="/"
             class="logo navbar-brand text-white offset-md-2"
             style="margin-left: 50px"
-            >Logo</a
+            >VIROM</a
           >
           <button
             class="navbar-toggler"
@@ -184,7 +184,7 @@
                   class="modal-btn"
                   class="img-fluid"
                   style="height: 235px"
-                  src="image/fontana_iti.jpg"
+                  src="image/vaticano.jpg"
                 />
                 <div class="modal my-modal">
                   <div class="modal-content">
