--- a/sign-up.html
+++ b/sign-up.html
@@ -56,7 +56,7 @@
             href="/"
             class="logo navbar-brand text-white offset-md-2"
             style="margin-left: 50px"
-            >Logo</a
+            >VIROM</a
           >
           <button
             class="navbar-toggler"
