--- a/about_Us.html
+++ b/about_Us.html
@@ -55,7 +55,7 @@
             href="/"
             class="logo navbar-brand text-white offset-md-2"
             style="margin-left: 50px"
-            >Logo</a
+            >VIROM</a
           >
           <button
             class="navbar-toggler"
